# fast-bunkai

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  main.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
crates/fast-bunkai-rs/: Cargo.toml
crates/fast-bunkai-rs/benches/: filter_set.rs
crates/fast-bunkai-rs/src/: emoji_data.rs  lib.rs
fast_bunkai/: _fast_bunkai.pyi  annotations.py  cli.py  core.py
scripts/: benchmark.py  generate_emoji_data.py
src/: lib.rs
tests/: smoke_test.py  test_cli.py  test_compatibility.py
tests/data/texts/: en_python_vs_rust.txt  ja_secon_dev_static_embedding_japanese.txt
