[workspace]
members = ["crates/fast-bunkai-rs"]

[package]
name = "fast_bunkai_native"
version = "0.1.1"
edition = "2021"

[lib]
name = "fast_bunkai_native"
crate-type = ["cdylib"]

[dependencies]
fast-bunkai-rs = { path = "crates/fast-bunkai-rs", version = "0.1.0" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
