[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "fast-bunkai"
version = "0.1.0"
description = "Rust-accelerated sentence boundary detection compatible with bunkai"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "janome>=0.5.0",
]

[tool.maturin]
module-name = "fast_bunkai._fast_bunkai"
bindings = "pyo3"

[dependency-groups]
dev = [
    "bunkai>=1.5.7",
    "pytest>=8.4.2",
]
