[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "fast-bunkai"
version = "0.1.0"
description = "Rust-accelerated sentence boundary detection compatible with bunkai"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "janome>=0.5.0",
]

[project.scripts]
fast-bunkai = "fast_bunkai.cli:main"

[tool.maturin]
module-name = "fast_bunkai._fast_bunkai"
bindings = "pyo3"

[dependency-groups]
dev = [
    "bunkai>=1.5.7",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.404",
    "ruff>=0.6.8",
    "tox>=4.23.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--maxfail=1", "--durations=5"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["tmp"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportUnusedImport = true
reportUnusedVariable = true
exclude = [
    "tmp",
    ".venv",
    ".tox",
    "target",
    "node_modules",
    "**/__pycache__",
    ".cache",
]
