[package]
name = "fast-bunkai-rs"
version = "0.1.0"
edition = "2021"
description = "Core sentence segmentation logic for fast-bunkai"
license = "Apache-2.0"

[lib]
name = "fast_bunkai_rs"

[dependencies]
memchr = "2.7"
once_cell = "1"
rustc-hash = "1.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "filter_set"
harness = false
